--- a/scss/_medium.scss
+++ b/scss/_medium.scss
@@ -67,7 +67,9 @@ nav a {
 } 
 
 
-
+.medium-0 {
+    flex-basis: 0;
+}
 
 
 
